--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@
 /.vs/NodeConsoleApp1/FileContentIndex/821225a3-1573-48ce-9657-950bc2cdc16c.vsidx
 /.vs/NodeConsoleApp1/FileContentIndex/67e3617e-2f34-4987-9bf7-3a4a85dba24d.vsidx
 /.vs/NodeConsoleApp1/FileContentIndex/821225a3-1573-48ce-9657-950bc2cdc16c.vsidx
+*.suo
+*.vsidx
+*.json
